--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^14.0.0",
     "notiflix": "^3.2.5",
     "rxjs": "~7.5.0",
+    "socket.io-client": "^4.7.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
